Bug 1962022: Disconnect system info promises when the calling global is disconnected. r=chutten

The crash reason from bug 1962022 points to promises in the profile service, but the stacks end
in promises in nsSystemInfo. I'm not sure why this is the case but none of the promises in
nsSystemInfo are set to disconnect when their calling global goes away so this seems like a useful
improvement nonetheless. Once this lands we can watch the crash frequency to see if it ends up
resolving the bug or not.

Differential Revision: https://phabricator.services.mozilla.com/D246929